Commit al master del blogpost en su version más reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,11 @@
     <title>El título del post</title>
 </head>
 <body>
-    <h1>Aquí vamos a hacer un post</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam labore inventore recusandae dicta officiis accusamus cumque cupiditate! Deleniti aspernatur error beatae, sequi nihil aperiam voluptates nisi nam, ducimus sit nesciunt?</p>
+    <div class="container" id="container">
+
+        <h1>Este es el título atractivo e interesante del post</h1>
+        <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+
+    </div>
 </body>
 </html>
