--- a/blogpost.html
+++ b/blogpost.html
@@ -7,11 +7,14 @@
     <title>El título del post</title>
 </head>
 <body>
-    <div class="container" id="container">
-
-        <h1>Este es el título atractivo e interesante del post</h1>
-        <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
-
+    <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
+        <div id="post">
+            <h1>Este es el título atractivo e interesante del post</h1>
+            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>   
+        </div>
     </div>
 </body>
 </html>
