--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
 
         <h1>Este es el título atractivo e interesante del post</h1>
         <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
-
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde quaerat aliquam enim aperiam. Ullam nulla harum impedit libero delectus rerum deserunt aliquid nam, quod labore ea omnis blanditiis nihil quos.</p>
     </div>
 </body>
 </html>
