El comit que yo debí haber echo lo realizo la cuenta principal

--- a/blogpost.html
+++ b/blogpost.html
@@ -19,7 +19,7 @@
             <p>Texto con algún acento para probar como estan funcionando Árbol </p>
         </div>
         <div id="footer">
-            Hecho con amor en Platzi ♥
+            Hecho con amor en Platzi ♥ por Darynka Tapia
         </div>
     </div>
 </body>
