Tildes con entidades y un mensaje de contribución

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,7 @@
             <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
-            <h1>Este es el título atractivo e interesante del post</h1>
+            <h1>Este es el t&iacute;tulo atractivo e interesante del post</h1>
             <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>   
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde quaerat aliquam enim aperiam. Ullam nulla harum impedit libero delectus rerum deserunt aliquid nam, quod labore ea omnis blanditiis nihil quos.</p>
             <p>Texto con algún acento para probar como estan funcionando Árbol </p>
