Cambio al tagline y color de footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
         <div id="cabecera">
             <img src="imagenes/dragon.png" id="logo">
             Hyperblog 
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog de confianza :v</span>
         </div>
         <div id="post">
             <h1>Este es el t&iacute;tulo atractivo e interesante del post</h1>
